cruzy-demo/force-app/main/default/objects/Reward_Code__c/Reward_Code__c.object-meta.xml
<CustomObject>
    <description>Individual reward codes associated with a customer reward record.</description>
    <label>Reward Code</label>
    <nameField>
        <label>Reward Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>