cruzy-demo/force-app/main/default/objects/Reward_Code__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>