cruzy-demo/force-app/main/default/objects/Reward_Code__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <label>Reward</label>
    <referenceTo>Reward__c</referenceTo>
    <relationshipLabel>Reward Codes</relationshipLabel>
    <relationshipName>Reward_Codes</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>