cruzy-demo/force-app/main/default/objects/Reward_Code__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <label>Reward Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cruise Reward</fullName><default>false</default><label>Cruise Reward</label></value>
            <value><fullName>Discount Code</fullName><default>false</default><label>Discount Code</label></value>
            <value><fullName>Membership Promo</fullName><default>false</default><label>Membership Promo</label></value>
            <value><fullName>Referral Reward</fullName><default>false</default><label>Referral Reward</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>